--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -43,12 +43,12 @@ $headingsFont: 'NeuzeitGrotesk', sans-serif;
 
 /*-----------Font Weights------------*/
 
-$fw-950: 950;
-$fw-900: 900;
-$fw-700: 700;
-$fw-600: 600;
-$fw-500: 500;
-$fw-400: 400;
+$fw-ExtraBlack: 950;
+$fw-Black: 900;
+$fw-Bold: 700;
+$fw-SemiBold: 600;
+$fw-Medium: 500;
+$fw-Regular: 400;
 
 /*-----------End of Font Weights------------*/
 
