--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -55,7 +55,9 @@ $fw-Regular: 400;
 
 /*-----------Font Sizes------------*/
 
+$fs-40: 40px;
 $fs-32: 32px;
+$fs-18: 18px;
 $fs-16: 16px;
 $fs-14: 14px;
 $fs-12: 12px;
