--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/global";
 
 .header{
-  @include theme($bg: $globalBlack);
+  @include theme($bg: $globalBlack, $color: $globalWhite);
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
 }
