--- a/src/components/Header/Preview/Preview.module.scss
+++ b/src/components/Header/Preview/Preview.module.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/global";
+@import "../../../assets/styles/global";
 
 .preview{
   background-image: linear-gradient(to bottom, rgb(0 0 0 / 10%), rgb(255 255 255 / 10%));
