--- a/src/components/Header/Promotion/Promotion.module.scss
+++ b/src/components/Header/Promotion/Promotion.module.scss
@@ -1,10 +1,10 @@
-@import "../../assets/styles/global";
+@import "../../../assets/styles/global";
 
 .promotion{
   padding: 40px 10px 10px;
   box-sizing: border-box;
   width: 100%;
-  background-image: url("../../assets/images/PromotionBg.png");
+  background-image: url("../../../assets/images/PromotionBg.png");
   background-size: 100%;
   height: 343px;
 }
