--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -22,7 +22,7 @@ $hfLight: #ECE5DD;
 
 $primeText: #282828;
 $secondaryText: #0B0B0B;
-$offerText: #F65D81;
+$timerText: #F65D81;
 
 
 // Button Colors
@@ -57,6 +57,7 @@ $fw-Regular: 400;
 
 $fs-40: 40px;
 $fs-32: 32px;
+$fs-20: 20px;
 $fs-18: 18px;
 $fs-16: 16px;
 $fs-14: 14px;
