--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -13,5 +13,10 @@
     color: $globalWhite;
     opacity: .7;
     text-decoration: none;
+    @include transitionSetting();
+
+    &:hover{
+      opacity: 1;
+    }
   }
 }
