--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,4 +4,6 @@
   @include theme($bg: $globalBlack, $color: $globalWhite);
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.3);
+  margin-bottom: 24px;
 }
