--- a/src/components/Header/PromotionInfo/PromotionInfo.module.scss
+++ b/src/components/Header/PromotionInfo/PromotionInfo.module.scss
@@ -1,6 +1,6 @@
 @import "../../../assets/styles/global";
 
-.info{
+.promotionInfo{
 
   &__title{
     margin: 0 0 8px;
@@ -13,32 +13,14 @@
   }
 
   &__sale{
-    margin-top: 24px;
-  }
-}
-
-.sale{
-  @include displaySettings();
-  border-radius: 30px;
-  outline: 1px solid rgb(255 255 255 / 50%);
-  background-image: linear-gradient(to bottom, $globalBlack, rgb(11 11 11 / 0%));
-  backdrop-filter: blur(5px);
-  max-width: 113px;
-  gap: 10px;
-  padding: 2px 0;
-
-  &__cost_first, &__cost_second{
-    margin: 0;
-  }
-
-  &__cost_first{
-    opacity: .8;
-    @include fontSet($ff: $headingsFont, $fs: $fs-18, $fw: $fw-Black, $lh: 18px);
-    text-decoration: line-through;
-  }
-
-  &__cost_second{
-    height: 48px;
-    @include fontSet($ff: $headingsFont, $fs: $fs-40, $fw: $fw-Black, $lh: 40px);
+    position: relative;
+    border-radius: 30px;
+    outline: 1px solid rgb(255 255 255 / 50%);
+    background-image: linear-gradient(to bottom, $globalBlack, rgb(11 11 11 / 0%));
+    backdrop-filter: blur(5px);
+    max-width: 113px;
+    gap: 10px;
+    background-size: 200% 100%;
+    padding: 2px 0;
   }
 }
