--- a/src/components/Header/Widget/Icon/Icon.module.scss
+++ b/src/components/Header/Widget/Icon/Icon.module.scss
@@ -3,12 +3,13 @@
 .widgetIcon {
   margin: 0 auto;
   width: 40px;
-  max-height: 40px;
+  height: 40px;
   @include displaySettings();
   position: relative;
   border-radius: 50%;
   background-color: rgb(11 11 11 / 60%);
   background-image: linear-gradient(to bottom, rgba(11, 11, 11, 0.1), rgba(255, 255, 255, 0.1));
+
 
   &::after {
     content: "";
@@ -19,12 +20,15 @@
     bottom: 0px;
     background-color: $globalBlack;
     border-radius: inherit;
-    background-image: linear-gradient(to bottom left, rgb(255, 255, 255, 70%) 0%, rgba(255, 255, 255, 0) 100%);
+    background-image: linear-gradient(to bottom left, rgb(255 255 255) 0%, rgb(255 255 255 / 70%) 100%);
     z-index: -1;
   }
 
   &__icon{
-    padding: 10px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
   }
 }
 
