--- a/src/components/Header/Widget/Widget.module.scss
+++ b/src/components/Header/Widget/Widget.module.scss
@@ -8,9 +8,9 @@
   max-height: 118px;
   @include displaySettings($justify: space-between);
   flex-direction: column;
-  background-color: $globalBlack;
+  background-color: rgb(11 11 11 / 70%);
   border-radius: 30px;
-  background-image: linear-gradient(to bottom, rgba(11, 11, 11, 0.1), rgba(255, 255, 255, 0.1));
+  background-image: linear-gradient(to top, rgba(11, 11, 11, 0.1), rgba(255, 255, 255, 0.1));
 
   &::after {
     content: "";
@@ -19,9 +19,8 @@
     left: -1px;
     right: -1px;
     bottom: -1px;
-    background-color: $globalBlack;
     border-radius: inherit;
-    background-image: linear-gradient(to bottom left, rgb(255, 255, 255, 70%) 0%, rgba(255, 255, 255, 0) 100%);
+    background-image: linear-gradient(to top right, rgb(255, 255, 255, 30%) 0%, rgba(255, 255, 255, 5%) 100%);
     z-index: -1;
   }
 
